# Generative-AI-practice

./: main.py  pyproject.toml  requirements.txt
langchain/: 1.langchain_intro.ipynb
