[project]
name = "generative-ai-practice"
version = "0.1.0"
description = "Langchain practice"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
]
